# bankid-cpp

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  LIBRARY_README.md  LICENSE  README.md  SSL_SETUP.md  conanfile.txt  pem_generator.sh
.github/workflows/: build-test-check.yml
bankid/: BankIDConfig.cmake.in  CMakeLists.txt  bankid.cpp
bankid/includes/: bankid.h  httplib.h
bankid/includes/api/: auth.h  cancel.h  collect.h  other.payment.h  payment.h  phone.auth.h  phone.sign.h  responses.h  sign.h
server/: CMakeLists.txt  README.md  main.cpp  routes.cpp  webserver.cpp
server/includes/: helper.h  routes.h  webserver.h
tests/: CMakeLists.txt  test_auth.cpp  test_cancel.cpp  test_collect.cpp  test_other_payment.cpp  test_payment.cpp  test_phone_auth.cpp  test_phone_sign.cpp  test_sign.cpp  test_ssl.cpp
tests/certs/: bankid_cert.pem
